--- a/app/globals.css
+++ b/app/globals.css
@@ -1,30 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-  :root {
-    --background: 200 20% 98%;
-    --btn-background: 200 10% 91%;
-    --btn-background-hover: 200 10% 89%;
-    --foreground: 200 50% 3%;
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --background: 200 50% 3%;
-      --btn-background: 200 10% 9%;
-      --btn-background-hover: 200 10% 12%;
-      --foreground: 200 20% 96%;
-    }
-  }
-}
-
-@layer base {
-  * {
-    @apply border-foreground/20;
-  }
-}
 
 .animate-in {
   animation: animateIn 0.3s ease 0.15s both;
@@ -39,4 +16,12 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.book {
+  font-family: "Gentium Book Plus", serif;
+  font-weight: 700;
+  box-shadow:
+    8px 10px 8px 1px rgba(0, 0, 0, 0.57),
+    16px 16px 12px -8px rgba(255, 255, 255, 0.2) inset;
 }
